# oop1_ex04

./: CMakeLists.txt  README.docx
include/: Board.h  GameObject.h  Window.h
resources/: CMakeLists.txt
src/: Board.cpp  GameObject.cpp  Window.cpp  main.cpp
